--- a/css/style.css
+++ b/css/style.css
@@ -1094,6 +1094,69 @@ main .rating-block {
       color: #333333;
       padding: 14px 0 0 4px; }
 
+main .place-cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  width: 50%;
+  margin: 4px 0 0 757px; }
+  main .place-cont .place-box {
+    margin: 5px;
+    padding: 20px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: 860px;
+    height: 212px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(rgba(255, 255, 255, 0))), #F2358D;
+    background: -webkit-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+    background: -o-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+    border-radius: 5px 5px 0px 0px; }
+  main .place-cont .place-info #tabs .tab {
+    display: inline-block;
+    padding: 5px 10px;
+    cursor: pointer;
+    position: relative;
+    z-index: 5; }
+  main .place-cont .place-info #tabs .whiteborder {
+    border-bottom: 1px solid #7e7e7e;
+    background: rgba(203, 222, 240, 0.5);
+    border-radius: 5px 5px 0px 0px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #666666; }
+  main .place-cont .place-info #tabs .gray {
+    background: #F1F1F1;
+    border-radius: 5px 5px 0px 0px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #666666; }
+    main .place-cont .place-info #tabs .gray:hover {
+      background: #b6b6b6; }
+  main .place-cont .place-info #tabs .tabContent {
+    width: 300px;
+    height: 60px;
+    position: relative;
+    top: -1px;
+    z-index: 1;
+    padding: 10px;
+    border-radius: 0 0 3px 3px; }
+  main .place-cont .place-info #tabs .hide {
+    display: none; }
+  main .place-cont .place-info #tabs .show {
+    display: block; }
+
 @media screen and (max-width: 1570px) {
   header .header-flex-cont .header-flex-box:first-child img {
     width: 83px;
