--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ main .sidebar-block-1 {
     width: 356px;
     height: 140px;
     background: #fff;
-    border-radius: 30px; }
+    border-radius: 8px; }
     main .sidebar-block-1 .slider-full .btn-slider {
       position: relative;
       width: 15px;
@@ -370,48 +370,50 @@ main .sidebar-block-1 {
           height: 43.14px; }
           main .sidebar-block-1 .slider-full .photo-slider .sl .img-sl-line ul li img:hover {
             opacity: 0.7; }
-    main .sidebar-block-1 .slider-full .sl-info-var p {
-      position: absolute;
-      background: white;
-      border: 1px solid #D8DCF2;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      -webkit-box-shadow: 0px 1px 0px #D8DCF2;
-      box-shadow: 0px 1px 0px #D8DCF2;
-      border-radius: 5px;
-      text-align: center;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 10px;
-      line-height: 12px;
-      color: #333333; }
-      main .sidebar-block-1 .slider-full .sl-info-var p:hover {
-        background: rgba(163, 163, 163, 0.5); }
-    main .sidebar-block-1 .slider-full .sl-info-var p:first-child {
-      margin: -139px 0 0 163px;
-      width: 63px;
-      padding: 3px; }
-    main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(2) {
-      margin: -139px 0 0 229px;
-      width: 39px;
-      padding: 3px; }
-    main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(3) {
-      margin: -116px 0 0 163px;
-      width: 53px;
-      padding: 3px 7px 3px 7px; }
-    main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(4) {
-      margin: -116px 0 0 218px;
-      width: 58px;
-      padding: 3px; }
-    main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(5) {
-      margin: -93px 0 0 163px;
-      width: 42px;
-      padding: 3px; }
-    main .sidebar-block-1 .slider-full .sl-info-var p:last-child {
-      margin: -93px 0 0 208px;
-      width: 92px;
-      padding: 3px; }
+    main .sidebar-block-1 .slider-full .sl-info-var {
+      padding-top: 7px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p {
+        position: absolute;
+        background: white;
+        border: 1px solid #D8DCF2;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-box-shadow: 0px 1px 0px #D8DCF2;
+        box-shadow: 0px 1px 0px #D8DCF2;
+        border-radius: 5px;
+        text-align: center;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 12px;
+        color: #333333; }
+        main .sidebar-block-1 .slider-full .sl-info-var p:hover {
+          background: rgba(163, 163, 163, 0.5); }
+      main .sidebar-block-1 .slider-full .sl-info-var p:first-child {
+        margin: -139px 0 0 163px;
+        width: 63px;
+        padding: 3px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(2) {
+        margin: -139px 0 0 229px;
+        width: 39px;
+        padding: 3px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(3) {
+        margin: -116px 0 0 163px;
+        width: 53px;
+        padding: 3px 7px 3px 7px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(4) {
+        margin: -116px 0 0 218px;
+        width: 58px;
+        padding: 3px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p:nth-child(5) {
+        margin: -93px 0 0 163px;
+        width: 42px;
+        padding: 3px; }
+      main .sidebar-block-1 .slider-full .sl-info-var p:last-child {
+        margin: -93px 0 0 208px;
+        width: 92px;
+        padding: 3px; }
     main .sidebar-block-1 .slider-full .sl-metro img {
       position: absolute;
       margin: -61px 0 0 164px; }
@@ -561,7 +563,7 @@ main .sidebar-block-2 {
     width: 356px;
     height: 140px;
     background: #fff;
-    border-radius: 30px; }
+    border-radius: 8px; }
     main .sidebar-block-2 .slider-full-2 .btn-slider-2 {
       position: relative;
       width: 15px;
@@ -605,48 +607,50 @@ main .sidebar-block-2 {
           height: 43.14px; }
           main .sidebar-block-2 .slider-full-2 .photo-slider-2 .sl-2 .img-sl-line-2 ul li img:hover {
             opacity: 0.7; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p {
-      position: absolute;
-      background: white;
-      border: 1px solid #D8DCF2;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      -webkit-box-shadow: 0px 1px 0px #D8DCF2;
-      box-shadow: 0px 1px 0px #D8DCF2;
-      border-radius: 5px;
-      text-align: center;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 10px;
-      line-height: 12px;
-      color: #333333; }
-      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:hover {
-        background: rgba(163, 163, 163, 0.5); }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:first-child {
-      margin: -139px 0 0 163px;
-      width: 63px;
-      padding: 3px; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(2) {
-      margin: -139px 0 0 229px;
-      width: 39px;
-      padding: 3px; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(3) {
-      margin: -116px 0 0 163px;
-      width: 53px;
-      padding: 3px 7px 3px 7px; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(4) {
-      margin: -116px 0 0 218px;
-      width: 58px;
-      padding: 3px; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(5) {
-      margin: -93px 0 0 163px;
-      width: 47px;
-      padding: 3px; }
-    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:last-child {
-      margin: -93px 0 0 212px;
-      width: 92px;
-      padding: 3px; }
+    main .sidebar-block-2 .slider-full-2 .sl-info-var-2 {
+      padding-top: 7px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p {
+        position: absolute;
+        background: white;
+        border: 1px solid #D8DCF2;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-box-shadow: 0px 1px 0px #D8DCF2;
+        box-shadow: 0px 1px 0px #D8DCF2;
+        border-radius: 5px;
+        text-align: center;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 12px;
+        color: #333333; }
+        main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:hover {
+          background: rgba(163, 163, 163, 0.5); }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:first-child {
+        margin: -139px 0 0 163px;
+        width: 63px;
+        padding: 3px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(2) {
+        margin: -139px 0 0 229px;
+        width: 39px;
+        padding: 3px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(3) {
+        margin: -116px 0 0 163px;
+        width: 53px;
+        padding: 3px 7px 3px 7px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(4) {
+        margin: -116px 0 0 218px;
+        width: 58px;
+        padding: 3px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:nth-child(5) {
+        margin: -93px 0 0 163px;
+        width: 47px;
+        padding: 3px; }
+      main .sidebar-block-2 .slider-full-2 .sl-info-var-2 p:last-child {
+        margin: -93px 0 0 212px;
+        width: 92px;
+        padding: 3px; }
     main .sidebar-block-2 .slider-full-2 .sl-metro-2 img {
       position: absolute;
       margin: -61px 0 0 164px; }
@@ -796,7 +800,7 @@ main .sidebar-block-3 {
     width: 356px;
     height: 140px;
     background: #fff;
-    border-radius: 30px; }
+    border-radius: 8px; }
     main .sidebar-block-3 .slider-full-3 .btn-slider-3 {
       position: relative;
       width: 15px;
@@ -840,48 +844,50 @@ main .sidebar-block-3 {
           height: 43.14px; }
           main .sidebar-block-3 .slider-full-3 .photo-slider-3 .sl-3 .img-sl-line-3 ul li img:hover {
             opacity: 0.7; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p {
-      position: absolute;
-      background: white;
-      border: 1px solid #D8DCF2;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      -webkit-box-shadow: 0px 1px 0px #D8DCF2;
-      box-shadow: 0px 1px 0px #D8DCF2;
-      border-radius: 5px;
-      text-align: center;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 10px;
-      line-height: 12px;
-      color: #333333; }
-      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:hover {
-        background: rgba(163, 163, 163, 0.5); }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:first-child {
-      margin: -139px 0 0 163px;
-      width: 63px;
-      padding: 3px; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(2) {
-      margin: -139px 0 0 229px;
-      width: 39px;
-      padding: 3px; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(3) {
-      margin: -116px 0 0 163px;
-      width: 53px;
-      padding: 3px 7px 3px 7px; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(4) {
-      margin: -116px 0 0 218px;
-      width: 58px;
-      padding: 3px; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(5) {
-      margin: -93px 0 0 163px;
-      width: 42px;
-      padding: 3px; }
-    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:last-child {
-      margin: -93px 0 0 208px;
-      width: 92px;
-      padding: 3px; }
+    main .sidebar-block-3 .slider-full-3 .sl-info-var-3 {
+      padding-top: 7px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p {
+        position: absolute;
+        background: white;
+        border: 1px solid #D8DCF2;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-box-shadow: 0px 1px 0px #D8DCF2;
+        box-shadow: 0px 1px 0px #D8DCF2;
+        border-radius: 5px;
+        text-align: center;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 12px;
+        color: #333333; }
+        main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:hover {
+          background: rgba(163, 163, 163, 0.5); }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:first-child {
+        margin: -139px 0 0 163px;
+        width: 63px;
+        padding: 3px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(2) {
+        margin: -139px 0 0 229px;
+        width: 39px;
+        padding: 3px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(3) {
+        margin: -116px 0 0 163px;
+        width: 53px;
+        padding: 3px 7px 3px 7px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(4) {
+        margin: -116px 0 0 218px;
+        width: 58px;
+        padding: 3px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:nth-child(5) {
+        margin: -93px 0 0 163px;
+        width: 42px;
+        padding: 3px; }
+      main .sidebar-block-3 .slider-full-3 .sl-info-var-3 p:last-child {
+        margin: -93px 0 0 208px;
+        width: 92px;
+        padding: 3px; }
     main .sidebar-block-3 .slider-full-3 .sl-metro-3 img {
       position: absolute;
       margin: -61px 0 0 164px; }
@@ -1102,60 +1108,148 @@ main .place-cont {
   -webkit-box-direction: normal;
   -ms-flex-flow: column nowrap;
   flex-flow: column nowrap;
-  width: 50%;
   margin: 4px 0 0 757px; }
   main .place-cont .place-box {
     margin: 5px;
     padding: 20px;
     -webkit-box-flex: 0;
     -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
-    width: 860px;
-    height: 212px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(rgba(255, 255, 255, 0))), #F2358D;
-    background: -webkit-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
-    background: -o-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
-    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
-    border-radius: 5px 5px 0px 0px; }
-  main .place-cont .place-info #tabs .tab {
-    display: inline-block;
-    padding: 5px 10px;
-    cursor: pointer;
-    position: relative;
-    z-index: 5; }
-  main .place-cont .place-info #tabs .whiteborder {
-    border-bottom: 1px solid #7e7e7e;
-    background: rgba(203, 222, 240, 0.5);
-    border-radius: 5px 5px 0px 0px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    color: #666666; }
-  main .place-cont .place-info #tabs .gray {
-    background: #F1F1F1;
-    border-radius: 5px 5px 0px 0px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    color: #666666; }
-    main .place-cont .place-info #tabs .gray:hover {
-      background: #b6b6b6; }
-  main .place-cont .place-info #tabs .tabContent {
-    width: 300px;
-    height: 60px;
-    position: relative;
-    top: -1px;
-    z-index: 1;
-    padding: 10px;
-    border-radius: 0 0 3px 3px; }
-  main .place-cont .place-info #tabs .hide {
-    display: none; }
-  main .place-cont .place-info #tabs .show {
-    display: block; }
+    flex: 0 1 auto; }
+    main .place-cont .place-box .op {
+      position: absolute;
+      width: 860px;
+      height: 210px;
+      background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(rgba(255, 255, 255, 0))), #F2358D;
+      background: -webkit-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+      background: -o-linear-gradient(top, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+      background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F2358D;
+      border-radius: 5px 5px 0px 0px;
+      opacity: 0.1;
+      z-index: -100; }
+    main .place-cont .place-box h3 {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 152.34%;
+      letter-spacing: 0.25px;
+      color: #4F4F4F;
+      margin-left: 20px; }
+  main .place-cont .img-box {
+    margin-left: 15px; }
+    main .place-cont .img-box img:first-child {
+      width: 72px;
+      height: 72px;
+      position: absolute;
+      margin-top: 10px; }
+    main .place-cont .img-box img:last-child {
+      width: 50px;
+      height: 50px;
+      margin: 85px 0 0 135px;
+      position: absolute; }
+  main .place-cont .place-info {
+    margin: 0px 0 0 230px; }
+    main .place-cont .place-info #tabs .tab {
+      display: inline-block;
+      cursor: pointer;
+      position: relative;
+      z-index: 5;
+      padding: 6px 20px 6px 20px; }
+    main .place-cont .place-info #tabs .whiteborder {
+      border-bottom: 1px solid #7e7e7e;
+      background: rgba(203, 222, 240, 0.5);
+      border-radius: 5px 5px 0px 0px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 14px;
+      color: #666666; }
+    main .place-cont .place-info #tabs .gray {
+      background: #F1F1F1;
+      border-radius: 5px 5px 0px 0px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 14px;
+      color: #666666; }
+      main .place-cont .place-info #tabs .gray:hover {
+        background: #b6b6b6; }
+    main .place-cont .place-info #tabs .tabContent {
+      width: 685px;
+      height: 60px;
+      position: relative;
+      top: -1px;
+      z-index: 1;
+      padding: 10px;
+      border-radius: 0 0 3px 3px; }
+    main .place-cont .place-info .text-1 {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 120%;
+      color: #333333;
+      width: 295px;
+      height: 120%;
+      margin-left: -15px; }
+      main .place-cont .place-info .text-1 p {
+        margin: -24px 0 0 24px; }
+    main .place-cont .place-info .text-2 {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 120%;
+      color: #333333;
+      width: 295px;
+      margin-left: -15px; }
+      main .place-cont .place-info .text-2 p {
+        margin: -22px 0 0 24px; }
+    main .place-cont .place-info .text-3 {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 10px 0 0 -9px; }
+      main .place-cont .place-info .text-3 p {
+        padding: 3px 0 0 9px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+        color: #333333; }
+        main .place-cont .place-info .text-3 p span {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 14px;
+          color: #999999; }
+    main .place-cont .place-info .more-photo img:first-child {
+      margin: -155px 0 0 428px;
+      position: absolute; }
+    main .place-cont .place-info .more-photo a {
+      text-decoration: none;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 10px;
+      line-height: 12px;
+      color: #18298C;
+      border-bottom: 1px dotted #18298C;
+      margin: -23px 0 0 430px;
+      position: absolute; }
+      main .place-cont .place-info .more-photo a:hover {
+        border-bottom: none; }
+    main .place-cont .place-info .more-photo img:last-child {
+      position: absolute;
+      margin: -26px 0 0 550px; }
+    main .place-cont .place-info #tabs .hide {
+      display: none; }
+    main .place-cont .place-info #tabs .show {
+      display: block; }
 
 @media screen and (max-width: 1570px) {
   header .header-flex-cont .header-flex-box:first-child img {
