--- a/css/style.scss
+++ b/css/style.scss
@@ -1634,7 +1634,7 @@ main {
         margin: 10px 0 0 -9px;
 
         p {
-          padding: 3px 0 0 9px;
+          padding: 3px 8px 0 3px;
           font-family: Roboto;
           font-style: normal;
           font-weight: normal;
